--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @use "components.scss";
 
 body {
-    background-color: var(--test-background-color);
-    color: var(--test-text-color);
+    background-color: var(--color-neutral-800);
+    color: var(--color-neutral-100);
+    font-family: Inter, sans-serif;
 }
