--- a/src/styles/setting.scss
+++ b/src/styles/setting.scss
@@ -1,8 +1,59 @@
 // Variables de CSS
 :root {
-    --test-background-color: #282828;
-    --test-text-color: #d1d1d1;
+    // Grey scale
+    --color-neutral-50: #fafafa;
+    --color-neutral-100: #f5f5f5;
+    --color-neutral-200: #e5e5e5;
+    --color-neutral-300: #d4d4d4;
+    --color-neutral-400: #a3a3a3;
+    --color-neutral-500: #737373;
+    --color-neutral-600: #525252;
+    --color-neutral-700: #404040;
+    --color-neutral-800: #262626;
+    --color-neutral-900: #171717;
+    --color-neutral-950: #0a0a0a;
+
+    // Violet scale
+    --color-violet-50: #f5f3ff;
+    --color-violet-100: #ede9fe;
+    --color-violet-200: #ddd6fe;
+    --color-violet-300: #c4b5fd;
+    --color-violet-400: #a78bfa;
+    --color-violet-500: #8b5cf6;
+    --color-violet-600: #7c3aed;
+    --color-violet-700: #6d28d9;
+    --color-violet-800: #5b21b6;
+    --color-violet-900: #4c1d95;
+    --color-violet-950: #2e1065;
 }
 
 // Variables de SASS
-$text-color: #333;
+// $hola: #ff0000;
+
+
+
+// Mixins
+@mixin text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+}
+@mixin text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+}
+@mixin text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+@mixin text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+}
+@mixin text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+}
+@mixin text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
