--- a/src/styles/components/first-outstanding-blog.scss
+++ b/src/styles/components/first-outstanding-blog.scss
@@ -1,33 +1,35 @@
 @use "../setting.scss" as *;
 
-.outstanding-blog.one {
-    background-color: transparent;
-
-    position: relative;
+.article-blog.percent66 {
     display: flex;
-    align-items: center;
-    gap: 20px;
-    padding: 40px;
-    justify-content: end;
+    gap: 24px;
+}
+.left, .information {
+    display: flex;
+    flex-direction: column;
 }
 
-.outstanding-big-title {
-    position: absolute;
-    top: calc(50% - 20px);
-    left: 40px;
-    text-shadow: 1px 1px 10px black;
-    color: rgb(99, 31, 31);
-    @include text-2xl;
-
-    & span {
-        background-color: red;
-        padding: 6px;
-        @include text-sm;
-    }
-}
-
-.image {
-    
-    width: 80%;
+.image66 {
+    max-width: 70%;
+    width: auto;
+    height: auto;
     border-radius: 10px;
+}
+.image33 {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.article-title .header{
+    font-size: 26px;
+    font-weight: bold;
+}
+
+
+.tag {
+    padding: 2px 4px;
+    font-weight: 200;
+    background-color: var(--color-neutral-800);
+    color: var(--color-neutral-300);
 }
