--- a/src/styles/components/outstanding-blogs.scss
+++ b/src/styles/components/outstanding-blogs.scss
@@ -1,22 +1,22 @@
 .outstanding-blogs {
-    background-color: rgb(78, 78, 78);
+    background-color: var(--color-neutral-900);
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
 }
 
-.outstanding-blog {
-    background-color: rgb(92, 77, 77);
-    border: 1px dashed tomato;
+.article-blog {
+    border: 1px dashed rgb(238, 143, 0);
     min-height: 470px;
+    padding: 40px;
 }
 
-.outstanding-blog.one {
+.article-blog.one {
     grid-column: 1/3;
     grid-template-rows: auto;
 }
-.outstanding-blog.four {
+.article-blog.four {
     grid-column: 2/4;
     grid-template-rows: auto;
 }
