--- a/src/styles/setting.scss
+++ b/src/styles/setting.scss
@@ -1,6 +1,6 @@
 // Variables de CSS
 :root {
-    // Grey scale
+    // Gray scale
     --color-neutral-50: #fafafa;
     --color-neutral-100: #f5f5f5;
     --color-neutral-200: #e5e5e5;
