--- a/src/styles/components/principal-header.scss
+++ b/src/styles/components/principal-header.scss
@@ -1,4 +1,4 @@
-@use "/src/styles/setting.scss" as *;
+@use "/src/styles/tools.scss" as *;
 
 .principal-header {
     background-color: var(--color-neutral-900);
