--- a/src/styles/components/principal-blogs.scss
+++ b/src/styles/components/principal-blogs.scss
@@ -1,22 +1,114 @@
+@use "../tools.scss" as *;
+
 .principal-blogs {
     background-color: var(--color-neutral-900);
+}
 
+// Principal blogs
+.principal-blogs {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 100%;
+    gap: 3px;
 }
 
 .article-blog {
-    border: 1px dashed rgb(238, 143, 0);
-    min-height: 470px;
-    padding: 40px;
+    padding: 30px;
+    max-height: 300px;
+
+    border-width: 4px;
+    border-style: solid;
+    border-image: 
+      linear-gradient(
+        rgb(228,161,42), 
+        rgb(195,70,49),
+        rgb(68,99,132),
+        rgb(23,25,38)
+      ) 10 10%;
+
+
+    display: flex;
+    gap: 12px;
+
+    overflow: hidden; // para que no molesten las imágenes, fix
+
+    &:nth-child(2n + 1) .article-content{
+        order: 2;
+    }
+}
+.article-content {
+    width: 60%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.article-image {
+    width: auto;
+    img {
+        border-radius: 12px;
+        width: 100%;
+        height: 100%;
+    }
 }
 
-.article-blog.one {
-    grid-column: 1/3;
-    grid-template-rows: auto;
+// Dentro de las cars
+.article-title-text {
+    @include title-cards;
+    color: var(--color-yellow-400);
+    text-shadow: 2px 2px 2px rgb(216,88,43);
+    padding: 8px 0;
 }
-.article-blog.four {
-    grid-column: 2/4;
-    grid-template-rows: auto;
+.tag {
+    padding: 4px 4px;
+    font-weight: 200;
+    background-color: var(--color-neutral-800);
+    color: var(--color-neutral-300);
+}
+.paragraphs {
+    padding: 8px 0;
+    max-height: 105px;
+    overflow: hidden;
+    
+    @include paragraph-text;
+}
+.footer-content {
+    width: 100%;
+    padding: 2px 0;
+}
+
+
+@media (min-width: 768px) {
+    .principal-blogs {
+        grid-template-columns: 50% 50%;   
+    }
+    .article-blog {
+        flex-direction: column;
+        max-height: 700px;
+    }
+
+    .article-content{
+        width: 100%;
+        order: 2;
+    }
+
+    .article-image {
+        width: 100%;
+        max-height: 150px;
+    }
+}
+// @media (min-width: 992px) {
+
+// }
+@media (min-width: 1200px) {
+    .principal-blogs {
+        grid-template-columns: 33% 33% auto;
+    }
+
+    .article-blog:nth-child(1){
+        grid-column: 1 / 3;
+    }
+    .article-blog:nth-child(4){
+        grid-column: 2 / 4;
+    }
 }
