--- a/src/styles/setting.scss
+++ b/src/styles/setting.scss
@@ -13,6 +13,20 @@
     --color-neutral-900: #171717;
     --color-neutral-950: #0a0a0a;
 
+    // Yellow scale
+    --color-yellow-50: #fefce8;
+    --color-yellow-100: #fef9c3;
+    --color-yellow-200: #fef08a;
+    --color-yellow-300: #fde047;
+    --color-yellow-400: #facc15;
+    --color-yellow-500: #eab308;
+    --color-yellow-600: #ca8a04;
+    --color-yellow-700: #a16207;
+    --color-yellow-800: #854d0e;
+    --color-yellow-900: #713f12;
+    --color-yellow-950: #422006;
+
+
     // Violet scale
     --color-violet-50: #f5f3ff;
     --color-violet-100: #ede9fe;
