--- a/src/styles/tools.scss
+++ b/src/styles/tools.scss
@@ -23,7 +23,15 @@
     font-size: 1.25rem;
     line-height: 1.75rem;
 }
-@mixin text-2xl {
+
+
+@mixin title-cards {
+    font-weight: 900;
     font-size: 1.5rem;
-    line-height: 2rem;
+    line-height: 1.5rem;
+}
+@mixin paragraph-text {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1;
 }
