--- a/src/styles/components/principal-blogs.scss
+++ b/src/styles/components/principal-blogs.scss
@@ -4,17 +4,25 @@
     background-color: var(--color-neutral-900);
 }
 
-// Principal blogs
-.principal-blogs {
-    display: grid;
-    grid-template-columns: 100%;
-    gap: 3px;
+@media (min-width: 768px) {
+    .principal-blogs {
+        grid-template-columns: 50% 50%;   
+    }
+}
+// @media (min-width: 992px) {
+// }
+@media (min-width: 1200px) {
+    .principal-blogs {
+        grid-template-columns: 33% 33% auto;
+    }
+    .paragraphs {
+        max-height: 100%;
+        overflow: hidden;
+    }
 }
 
+// Principal blogs
 .article-blog {
-    padding: 30px;
-    max-height: 300px;
-
     border-width: 4px;
     border-style: solid;
     border-image: 
@@ -24,33 +32,9 @@
         rgb(68,99,132),
         rgb(23,25,38)
       ) 10 10%;
-
-
-    display: flex;
-    gap: 12px;
-
-    overflow: hidden; // para que no molesten las imágenes, fix
-
-    &:nth-child(2n + 1) .article-content{
-        order: 2;
-    }
 }
-.article-content {
-    width: 60%;
-    height: 100%;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.article-image {
-    width: auto;
-    img {
-        border-radius: 12px;
-        width: 100%;
-        height: 100%;
-    }
-}
+
 
 // Dentro de las cars
 .article-title-text {
@@ -78,37 +62,3 @@
 }
 
 
-@media (min-width: 768px) {
-    .principal-blogs {
-        grid-template-columns: 50% 50%;   
-    }
-    .article-blog {
-        flex-direction: column;
-        max-height: 700px;
-    }
-
-    .article-content{
-        width: 100%;
-        order: 2;
-    }
-
-    .article-image {
-        width: 100%;
-        max-height: 150px;
-    }
-}
-// @media (min-width: 992px) {
-
-// }
-@media (min-width: 1200px) {
-    .principal-blogs {
-        grid-template-columns: 33% 33% auto;
-    }
-
-    .article-blog:nth-child(1){
-        grid-column: 1 / 3;
-    }
-    .article-blog:nth-child(4){
-        grid-column: 2 / 4;
-    }
-}
