--- a/src/styles/components/secondary-blogs.scss
+++ b/src/styles/components/secondary-blogs.scss
@@ -24,6 +24,8 @@
         grid-template-columns: repeat(3, 1fr);
     }
 
+
+
     // .item {
         
     // }
@@ -61,6 +63,10 @@
 }
 
 .image {
+    width: 200px;
+    height: auto; 
     border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
 }
 
