--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -1,6 +1,6 @@
 @use "/src/styles/tools.scss" as *;
 
-.principal-header {
+.nav {
     background-color: var(--color-neutral-900);
     border-bottom: 2px solid var(--color-neutral-700);
 }
