--- a/src/styles/components/cards-principal-blogs.scss
+++ b/src/styles/components/cards-principal-blogs.scss
@@ -1,20 +1,16 @@
+// Blogs principales
+
 @media (min-width: 768px) {
     .article-blog {
         flex-direction: column;
         max-height: 700px;
     }
 }
-// @media (min-width: 768px) {
-
-// }
 @media (min-width: 1200px) {
     .article-blog:nth-child(1){
-        grid-column: 1 / 3;
         flex-direction: row;
-
     }
     .article-blog:nth-child(4){
-        grid-column: 2 / 4;
         flex-direction: row;
     }
 
