--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,22 +1,27 @@
 @use "/src/styles/setting.scss" as *;
 
-.secondary-footer {
+.footer {
     position: relative;
     width: 100%;
-    height: 80px;
+    height: 200px;
 
-    padding: 20px;
+    padding: 20px 40px;
 
     background-color: var(--color-neutral-900);
 }
-.secondary-container-footer {
+
+.container-footer {
     display: flex;
     justify-content: space-between;
+    height: 100%;
+    align-items: center;
 }
 
 .link .link-list{
     display: flex;
+    flex-direction: column;
 }
 .social-media, .social-medio-list {
     display: flex;
+    flex-direction: column;
 }
