--- a/src/styles/objects.scss
+++ b/src/styles/objects.scss
@@ -1,5 +1,5 @@
 // Principal-header
-.principal-list-header {
+.list-header {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -10,7 +10,7 @@
     gap: 50px;
 }
 // Position ICON
-.icon-principal-header {
+.icon-header {
     width: 84px;
     position: relative;
     bottom: -25px;
@@ -20,7 +20,7 @@
 }
 
 // Secondary-header
-.secondary-header {
+.header {
     width: 100%;
     height: 320px;
 
@@ -35,17 +35,67 @@
 // Principal blogs
 .principal-blogs {
     display: grid;
-    grid-template-columns: 100%;
+    grid-template-columns: 25% 25% 25% 25% ;
+    grid-template-rows: 25% 25% 25% 25% ;
     gap: 3px;
+
+    // ¿Con padding o sin padding?
+    padding: 40px;
 }
 
 .article-blog {
     display: flex;
     gap: 12px;
     padding: 30px;
-    max-height: 300px;
+    max-height: 300px; // pendiente
 
     &:nth-child(2n + 1) .article-content{
         order: 2;
+    }
+    
+
+    &:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 5;
+    }
+    &:nth-child(2) {
+        grid-area: 2 / 1 / 3 / 5;
+    }
+    &:nth-child(3) {
+        grid-area: 3 / 1 / 4 / 5;
+    }
+    &:nth-child(4) {
+        grid-area: 4 / 1 / 5 / 5;
+    }
+}
+@media (min-width: 768px) {
+    .article-blog{
+        &:nth-child(1) {
+            grid-area: 1 / 1 / 3 / 3;
+        }
+        &:nth-child(2) {
+            grid-area: 1 / 3 / 3 / 5;
+        }
+        &:nth-child(3) {
+            grid-area: 3 / 1 / 5 / 3;
+        }
+        &:nth-child(4) {
+            grid-area: 3 / 3 / 5 / 5;
+        }
+    }
+}
+@media (min-width: 1200px) {
+    .article-blog {
+        &:nth-child(1) {
+            grid-area: 1 / 1 / 3 / 4;
+        }
+        &:nth-child(2) {
+            grid-area: 1 / 4 / 3 / 5;
+        }
+        &:nth-child(3) {
+            grid-area: 3 / 1 / 5 / 2;
+        }
+        &:nth-child(4) {
+            grid-area: 3 / 2 / 5 / 5;
+        }
     }
 }
