--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -13,6 +13,9 @@
 @use "components/cards-principal-blogs--article-content.scss";
 @use "components/cards-principal-blogs--article-image.scss";
 
+@use "components/author.scss";
+
+
 // Organisms
 @use "components/nav.scss";
 @use "components/header.scss";
