--- a/src/styles/components/cards-principal-blogs--article-image.scss
+++ b/src/styles/components/cards-principal-blogs--article-image.scss
@@ -1,15 +1,17 @@
 .article-image {
-    width: auto;
     img {
         border-radius: 12px;
         width: 100%;
         height: 100%;
+
+        object-fit: cover;
+        object-position: center;
     }
 }
 @media (min-width: 768px) {
     .article-image {
         width: 100%;
-        max-height: 150px;
+        max-height: 200px;
     }
 }
 // @media (min-width: 768px) {
