--- a/src/styles/setting.scss
+++ b/src/styles/setting.scss
@@ -39,7 +39,16 @@
     --color-violet-800: #5b21b6;
     --color-violet-900: #4c1d95;
     --color-violet-950: #2e1065;
+
+
+    // Colores para el icono de la nav
+    --color-uno: rgb(55,74,103);
+    --color-dos: rgb(96,145,164);
+    --color-tres: rgb(215,135,48);
+    --color-cuatro: rgb(205,37,42);
+    --color-cinco: rgb(161,29,35);
 }
+
 
 // Variables de SASS
 // $hola: #ff0000;
