--- a/src/styles/components/cards-principal-blogs--article-content.scss
+++ b/src/styles/components/cards-principal-blogs--article-content.scss
@@ -1,3 +1,5 @@
+@use "/src/styles/tools.scss" as *;
+
 .article-content {
     width: 60%;
     height: 100%;
@@ -7,15 +9,13 @@
     justify-content: space-between;
 }
 
-@media (min-width: 768px) {
+@include mobile {
     .article-content{
         width: 100%;
         order: 2;
     }
 }
-// @media (min-width: 768px) {
 
-// }
-@media (min-width: 1200px) {
+@include desktop {
 
 }
