--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -6,15 +6,16 @@
 // 2. https://atomicdesign.bradfrost.com/chapter-2/
 
 // Atoms
+@use "components/icon-header.scss";
+@use "components/title-text.scss";
+@use "components/borders.scss";
+@use "components/tags.scss";
+@use "components/author.scss";
 
 
 // Molecules
-@use "components/first-outstanding-blog.scss";
 @use "components/cards-principal-blogs--article-content.scss";
 @use "components/cards-principal-blogs--article-image.scss";
-
-@use "components/author.scss";
-
 
 // Organisms
 @use "components/nav.scss";
@@ -25,7 +26,7 @@
 
 @use "components/secondary-blogs.scss";
 
-@use "components/popular-blogs.scss";
+@use "components/popular-author.scss";
 
-@use "components/principal-footer.scss";
+@use "components/promotion.scss";
 @use "components/footer.scss";
