--- a/src/styles/components/author.scss
+++ b/src/styles/components/author.scss
@@ -1,6 +1,7 @@
 .author {
     color: var(--color-yellow-400);
     font-weight: bold;
+    text-shadow: 0 0 3px var(--color-neutral-950);
 
     &:hover {
         color: var(--color-yellow-600);
