--- a/src/styles/components/popular-author.scss
+++ b/src/styles/components/popular-author.scss
@@ -26,7 +26,7 @@
     padding: 40px;
 
 
-    background: rgba(202,138,4, 0.2);
+    // background: rgba(202,138,4, 0.2);
     background: linear-gradient(180deg, rgba(202,138,4, 1) 05%, rgba(232,50,50, 0.865983893557423) 100%);
 }
 
