--- a/src/styles/components/promotion.scss
+++ b/src/styles/components/promotion.scss
@@ -1,4 +1,53 @@
-.principal-footer {
-    background-color: rgb(105, 105, 47);
+.promotion {
+    padding: 0 40px;
+}
+
+.promotion-container {
+    background-color: var(--color-neutral-800);
+
+    width: 100%;
+    height: 300px;
     padding: 40px;
+
+    background-image: linear-gradient(to bottom, #171717, #1a1a1a, #1c1c1c, #1f1f1f, #222222, #222222, #222222, #222222, #1f1f1f, #1c1c1c, #1a1a1a, #171717);
+}
+
+.form-promotion {
+    display: flex;
+    flex-direction: column;
+}
+
+.form {
+    display: flex;
+    gap: 10px;
+    input[type="email"] {
+        padding: 18px;
+        border-radius: 10px;
+        border: none;
+        width: 50%;
+
+        background-color: rgba(255, 255, 255, 0.1);
+
+        &:focus {
+            outline: 2px solid var(--color-yellow-700);
+            box-shadow: 2px 2px 5px black;
+        }
+    }
+
+    button {
+        padding: 18px;
+        border-radius: 10px;
+        border-top: 2px solid var(--color-yellow-700);
+        border-right: 2px solid var(--color-yellow-700);
+        border-bottom: 2px solid rgb(53, 77, 102);
+        border-left: 2px solid rgb(53, 77, 102);
+
+        box-shadow: 0 0 5px var(--color-neutral-950);
+
+        cursor: pointer;
+        background-color: transparent;
+        text-transform: uppercase;
+        font-weight: bold;
+        color: #d1d1d1;
+    }
 }
