--- a/src/styles/components/promotion.scss
+++ b/src/styles/components/promotion.scss
@@ -6,7 +6,7 @@
     background-color: var(--color-neutral-800);
 
     width: 100%;
-    height: 300px;
+    height: auto;
     padding: 40px;
 
     background-image: linear-gradient(to bottom, #171717, #1a1a1a, #1c1c1c, #1f1f1f, #222222, #222222, #222222, #222222, #1f1f1f, #1c1c1c, #1a1a1a, #171717);
