--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -4,25 +4,42 @@
 .footer {
     position: relative;
     width: 100%;
-    height: 200px;
+    height: auto;
 
     padding: 20px 40px;
 
     background-color: var(--color-neutral-900);
+
+    border-top: 2px solid var(--color-neutral-700);
 }
+
+
+
 
 .container-footer {
     display: flex;
     justify-content: space-between;
     height: 100%;
     align-items: center;
+
 }
 
-.link .link-list{
+.link .link-list {
     display: flex;
     flex-direction: column;
+    gap: 4px;
 }
-.social-media, .social-medio-list {
+.social-media .social-medio-list {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 20px;
 }
+
+
+@include mobile {
+    .link .link-list,
+    .social-media .social-medio-list{
+        flex-direction: row;
+        gap: 20px;
+    }
+} 
