--- a/src/styles/components/cards-principal-blogs--article-image.scss
+++ b/src/styles/components/cards-principal-blogs--article-image.scss
@@ -2,6 +2,8 @@
 
 .article-image {
     img {
+        display: none;
+
         border-radius: 12px;
         width: 100%;
         height: 100%;
@@ -14,6 +16,10 @@
     .article-image {
         width: 100%;
         max-height: 200px;
+
+        img {
+            display: block;
+        }
     }
 }
 
