--- a/src/styles/components/cards-principal-blogs.scss
+++ b/src/styles/components/cards-principal-blogs.scss
@@ -5,7 +5,7 @@
 @include mobile {
     .article-blog {
         flex-direction: column;
-        max-height: 470px;
+        min-height: 300px;
     }
 }
 @include desktop {
