--- a/src/styles/setting.scss
+++ b/src/styles/setting.scss
@@ -26,21 +26,6 @@
     --color-yellow-900: #713f12;
     --color-yellow-950: #422006;
 
-
-    // Violet scale
-    --color-violet-50: #f5f3ff;
-    --color-violet-100: #ede9fe;
-    --color-violet-200: #ddd6fe;
-    --color-violet-300: #c4b5fd;
-    --color-violet-400: #a78bfa;
-    --color-violet-500: #8b5cf6;
-    --color-violet-600: #7c3aed;
-    --color-violet-700: #6d28d9;
-    --color-violet-800: #5b21b6;
-    --color-violet-900: #4c1d95;
-    --color-violet-950: #2e1065;
-
-
     // Colores para el icono de la nav
     --color-uno: rgb(55,74,103);
     --color-dos: rgb(96,145,164);
@@ -50,7 +35,7 @@
 }
 
 
-// Variables de SASS
+// Variables de SASS // test
 // $hola: #ff0000;
 
 
