--- a/src/styles/components/secondary-blogs.scss
+++ b/src/styles/components/secondary-blogs.scss
@@ -23,13 +23,11 @@
     .secondary-blogs {
         grid-template-columns: repeat(3, 1fr);
     }
-
-
-
     // .item {
         
     // }
 }
+
 
 .item {
     display: flex;
@@ -40,8 +38,8 @@
     box-shadow: 5px 5px 10px black;
 
     width: 100%;
-    min-height: 300px;
-    max-height: 360px;
+    // min-height: 300px;
+    // max-height: 360px;
 
     transition: transform 0.5s;
     &:hover {
@@ -58,6 +56,13 @@
     object-fit: cover;
     object-position: center;
 }
+// Media query especial
+@media screen and (max-width: 550px) {
+    .image {
+        display: none
+    }
+}
+
 .container-information {
     display: flex;
     flex-direction: column;
