--- a/src/styles/tools.scss
+++ b/src/styles/tools.scss
@@ -1,5 +1,8 @@
+
+
 // Mixins
 
+// Breakpoints
 // Para aplicar, se usa: "@include <mobile/tablet/desktop> { }"
 @mixin mobile {
     @media (min-width: 768px) {
@@ -19,7 +22,6 @@
 
 
 // Mixins
-
 @mixin title-cards {
     font-weight: 900;
     font-size: 1.5rem;
