--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -15,3 +15,14 @@
         text-shadow: 0 0 4px rgb(0, 0, 0);
     }
 }
+
+.icon-header {
+    background: 
+    linear-gradient(white, white) padding-box,
+    linear-gradient(to right,
+    var(--color-uno),
+    var(--color-dos),
+    var(--color-tres),
+    var(--color-cuatro)) border-box;
+    box-shadow: 0px 0px 5px var(--color-cinco);
+}
