--- a/src/styles/components/popular-author.scss
+++ b/src/styles/components/popular-author.scss
@@ -3,36 +3,12 @@
 
 .popular-author {
     background-color: var(--color-neutral-900);
-
-    padding: 40px;
 }
-.popular-author-header {
-    display: flex;
-    justify-content: flex-start;
-}
+// .popular-author-header {
 
-.container-popular-author {
-    display: grid;
-    grid-template-columns: repeat(
-        auto-fit,
-        minmax(
-            250px,
-            1fr
-        )
-    );
-    // grid-template-rows: 100% ;
-    gap: 20px;
+// }
 
-    // grid-template-columns: repeat(4, 1fr);
-}
 .card-popular-author {
-    display: flex;
-    flex-direction: column;
-    // justify-content: flex-start;
-    gap: 16px;
-    padding: 40px;
-
-    // background: rgba(202,138,4, 0.2);
     background: linear-gradient(180deg, rgba(202,138,4, 1) 05%, rgba(232,50,50, 0.865983893557423) 100%);
 }
 
@@ -45,6 +21,7 @@
 
 .image-popular-author {
     border-radius: 50%;
-    box-shadow: 1px 1px 5px var(--color-neutral-700), 0 0 10px var(--color-neutral-950);
+    box-shadow: 1px 1px 5px var(--color-neutral-700),
+                0 0 10px var(--color-neutral-950);
 }
 
